--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person(given = "Michael",
            family = "Dumelle",
            role = c("aut", "cre"),
-           email = "first.last@example.com")
+           email = "Dumelle.Michael@epa.gov")
 Description: A companion R package for "Using R Packages for Reproducible Workflows"
     at the 2021 EPA R Workshop.
 License: GPL (>= 3)
